k8s/app-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  labels:
    app: spring-boot
spec:
  type: NodePort
  selector:
    app: spring-boot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      # --- NEW SCOUT CONTAINER ---
      containers:
        - name: spring-boot-app
          image: sailenhota/zele-backend:36288e0
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"      # Baseline: 10% of a CPU core
            limits:
              memory: "1024Mi"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: api/actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
