k8s/kafka-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: event-streaming
spec:
  ports:
    - port: 9092
      name: client
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: event-streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:3.7.0
          ports:
            - containerPort: 9092
